# sealion_inference

./: .gitignore  CMakeLists.txt  README.md  common-ggml.h  flake.nix  main.cpp  quantize.cpp  requirements.txt  safetensors-to-gguf.py
.ccls-cache/@@home@jasshank@work@caviato@sealion_inference/: @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@alloca.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@assert.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@byteswap.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@confname.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@cpu-set.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@endian.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@endianness.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@environments.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@errno.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@floatn-common.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@floatn.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@flt-eval-method.h.blob  @nix@store@7yidkgqrcw7hg0n0qik1wwa0hycvwjb9-glibc-2.38-27-dev@include@bits@fp-fast.h.blob  (+306 more)
(+14 files in other folders)
